# Context-Intelligence

./: .gitignore  AGENTS.md  CONTRIBUTING.md
PreTackler/: .gitignore  Cargo.toml  README.md  prompt_template.md
PreTackler/src/: main.rs  processor.rs
openspec/: project.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/specs/acceptance/: spec.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/specs/concurrency-constraints/: spec.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/specs/logging/: spec.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/specs/routing/: spec.md
openspec/changes/archive/2025-11-04-adapt-timeouts-and-route-long-files/specs/timeout-policy/: spec.md
openspec/changes/archive/2025-11-04-improve-pretackler-cli/: design.md  proposal.md  tasks.md
openspec/specs/acceptance/: spec.md
openspec/specs/concurrency-constraints/: spec.md
openspec/specs/concurrency-rate/: spec.md
openspec/specs/docs/: spec.md
openspec/specs/io-idempotency/: spec.md
openspec/specs/logging/: spec.md
openspec/specs/logging-observability/: spec.md
openspec/specs/model-sampling/: spec.md
openspec/specs/prompt/: spec.md
openspec/specs/routing/: spec.md
openspec/specs/security-keys/: spec.md
openspec/specs/skip-policy/: spec.md
openspec/specs/timeout-policy/: spec.md
openspec/specs/timeouts-retry/: spec.md
scripts/: acceptance.sh
(+10 files in other folders)
