[package]
name = "pretackler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
base64 = "0.22"
sysinfo = "0.30"
walkdir = "2.5"
rand = "0.8"
mime_guess = "2.0"
